--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.mobile.android-logcat": "1.2.2",
     "com.unity.multiplayer-hlapi": "1.0.8",
     "com.unity.purchasing": "3.1.0",
+    "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
